# calendarbot

./: .gitignore  MANIFEST.in  README.md  calendr.py  facts.py  facts.txt  main.py  model.py  prompts.toml  publish.sh  pyproject.toml  requirements.in
calendarbot/: __init__.py  calendars.py  facts.py  main.py  model.py  prompts.toml  token.pickle
google2/: googleauth.py  googlecalendar.py
