[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendarbot"
version = "1.7.1"
description = "Chat interface for Google Calendar"
readme = "README.md"
authors = [{ name = "HP Harmsen", email = "hp@harmsen.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ChatGPT", "GPT4", "Google Calendar"]
dependencies = [
    "openai",
    "tenacity",
    "gpteasy",
    "oauth2client",
    "gcsa",
    "pytz",
    "dateparser"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pip-tools", "black", "pytest", "build", "twine", "nox"]

[project.urls]
Homepage = "https://github.com/hpharmsen/calendarbot"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["calendarbot"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
"*" = ["*.txt"]
calendarbot = ['prompts.toml', 'token.pickle']